# raytracing

./: Cargo.toml  README.md  output.ppm
benches/: benchmark.rs
criterion/create_world/base/: estimates.json  sample.json  tukey.json
criterion/create_world/new/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/create_world/report/: index.html
criterion/report/: index.html
src/: camera.rs  hittable.rs  lib.rs  main.rs  ray.rs
