[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.24.2"
indicatif = "0.17.7"
itertools = "0.11.0"
num_cpus = "1.16.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html